# HIT-2024spring-CompilePrinciple

./: CMakeLists.txt  README.md
Exam/: 第11讲要点.pptx  第15讲要点.pptx  第19讲要点.pptx  第1讲要点.pptx  第2讲要点.pptx  第3讲要点.pptx  第8讲要点.pptx
Lab/: README.md  clean.sh  run.sh
Lab/Lab1/: CMakeLists.txt
Lab/Lab1/include/: SyntaxTree.h
Lab/Lab1/src/: Lexer.l  Makefile  Parse.output  Parse.tab.c  Parse.tab.h  Parse.y  SyntaxTree.c  lex.yy.c  main.c
Lab/code/: InterCode.c  InterCode.h  InterCodeEnum.h  Lexer.l  Makefile  Parse.output  Parse.tab.c  Parse.tab.h  Parse.y  SemanTypeEnum.h  Semantic.c  Semantic.h  SyntaxTree.c  SyntaxTree.h  TokenTypeEnum.h  lex.yy.c  main.c  out1.txt  parser  test.sh
Lab/outputres/: A-1.result  A-10.result  A-2.result  A-3.result  A-4.result  A-5.result  A-6.result  A-7.result  A-8.result  A-9.result  A_1.res  A_2.res  A_3.res  A_4.res  A_5.res  A_6.res  A_8.res  A_9.res  B-1.result  B-2.result  B_1.res  B_2.res  D-1.result  D_1.res  D_2.res  E1-1.result  E1-2.result  E1_1.res  E1_2.res  E2-1.result  E2-2.result  E2_2.res  E3-1.result  E3_1.res  errorcase1.result  errorcase2.result  extra10.res  extra6.res  extra6.result  extra8.res  (+18 more)
Lab/reference/: C--语言文法示意图.pptx
Lab/report/: 实验一.docx  实验三.docx  实验二.docx
Lab/testcases/: errorcase1.cmm  errorcase2.cmm  extra9.cmm  input3.cmm
Slides/ppt/: SPOC 第2章 语言及其文法.ppt  SPOC 第3章 词法分析.ppt  SPOC 第4章 语法分析 - 下.pptx
